<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context="singlepageapp.mohanty.dinesh.com.quizapp.MainActivity">

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/header_style"
            android:text="@string/q1" />
        <EditText
            android:id="@+id/q1_edit"
            style="@style/header_style"
            android:hint="@string/q1hint"
            android:textStyle="normal"/>
        <TextView
            style="@style/header_style"
            android:text="@string/q2" />
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <CheckBox
                   android:id="@+id/id_q2o1"
                   style="@style/header_style"
                   android:text="@string/q2o1"
                   android:textStyle="normal"
                   android:layout_width="0dp"
                   android:layout_weight="1"/>
               <CheckBox
                   android:id="@+id/id_q2o2"
                   style="@style/header_style"
                   android:text="@string/q2o2"
                   android:textStyle="normal"
                   android:layout_width="0dp"
                   android:layout_weight="1"/>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <CheckBox
                   android:id="@+id/id_q2o3"
                   style="@style/header_style"
                   android:text="@string/q2o3"
                   android:textStyle="normal"
                   android:layout_width="0dp"
                   android:layout_weight="1"/>
               <CheckBox
                   android:id="@+id/id_q2o4"
                   style="@style/header_style"
                   android:text="@string/q2o4"
                   android:textStyle="normal"
                   android:layout_width="0dp"
                   android:layout_weight="1"/>
           </LinearLayout>
       </LinearLayout>
        <TextView
            style="@style/header_style"
            android:text="@string/q3"/>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                    android:id="@+id/id_q3o1"
                    android:text="@string/q3o1"
                    style="@style/header_style"
                    android:layout_weight="1"
                    android:textStyle="normal" />
                <RadioButton
                    android:id="@+id/id_q3o2"
                    android:text="@string/q3o2"
                    style="@style/header_style"
                    android:layout_weight="1"
                    android:textStyle="normal"/>
                <RadioButton
                    android:id="@+id/id_q3o3"
                    android:text="@string/q3o3"
                    style="@style/header_style"
                    android:layout_weight="1"
                    android:textStyle="normal"/>
                <RadioButton
                    android:id="@+id/id_q3o4"
                    android:text="@string/q3o4"
                    style="@style/header_style"
                    android:layout_weight="1"
                    android:textStyle="normal"/>
        </RadioGroup>
        <TextView
            style="@style/header_style"
            android:text="@string/q4"/>
        <ToggleButton
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/q4yes"
            android:textOff="@string/q4no"
            android:layout_marginBottom="16dp" />
        <TextView
            style="@style/header_style"
            android:text="@string/q5"/>
        <Spinner
            android:id="@+id/spinner_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

        </Spinner>
        <TextView
            android:id="@+id/score_board"
            style="@style/header_style"
            android:text=""
            android:textSize="40dp"
            android:gravity="center_horizontal"/>
        <Button
            style="@style/header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_answer"
            android:onClick="submitAnswer"/>
    </LinearLayout>
    </ScrollView>